--- a/TODO
+++ b/TODO
@@ -1,10 +1,9 @@
 * License.
 
-* PST in Ethereum (base random on the payee address to eliminate possible
-  cheating).
-
 * Don't use TheGraph when not necessary, use plain RPC.
 
 * PayPal, etc.
 
 * Covers.
+
+* Author's name and data (email).
