--- a/TODO
+++ b/TODO
@@ -15,3 +15,6 @@
 * Processing of Pay and Donate events in TheGraph.
 
 * Should buying and donation acquire voting rights?
+
+* Introduce the concept of category price to avoid polluting Root and like with recently created
+  spam items and subcategories.
