--- a/TODO
+++ b/TODO
@@ -22,3 +22,5 @@
 * Make my app also a Web directory.
 
 * Show user's past voting.
+
+* Give everybody at least 1 wei voting rights to differentiate votes for and against?
