--- a/TODO
+++ b/TODO
@@ -17,3 +17,5 @@
 * Save AR key file in browser's local storage.
 
 * "Sealing" item file versions to avoid partial versions.
+
+* Items that a neither downloads nor web links.
