--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+* Category score voting can be broken by one user voting many times
+  little-by-little sums of ETH.
+
 * License.
 
 * Don't use TheGraph when not necessary, use plain RPC.
