--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 * Category score voting can be broken by one user voting many times
-  little-by-little sums of ETH.
+  little-by-little sums of ETH or by voting from several accounts.
 
 * License.
 
