--- a/TODO
+++ b/TODO
@@ -22,3 +22,5 @@
 * "Sealing" item file versions to avoid partial versions.
 
 * Items that a neither downloads nor web links.
+
+* Advise to install Brave or MetaMask.
