--- a/TODO
+++ b/TODO
@@ -24,3 +24,5 @@
 * Items that a neither downloads nor web links.
 
 * Advise to install Brave or MetaMask.
+
+* Check GraphQL queries results for errors.
