--- a/TODO
+++ b/TODO
@@ -29,3 +29,5 @@
 * Deleting items.
 
 * Disallow operations with non-existing items/categories.
+
+* generateId() makes zero number in the beginning.
