--- a/TODO
+++ b/TODO
@@ -28,3 +28,4 @@
 
 * Messaging like Twitter. Named "tweet" sets may be owned.
   "Tweets" in multiple categories.
+  Reward authors for upvoted "tweets"?
