--- a/TODO
+++ b/TODO
@@ -29,3 +29,4 @@
 * Messaging like Twitter. Named "tweet" sets may be owned.
   "Tweets" in multiple categories.
   Reward authors for upvoted "tweets"?
+  Items linking to Arweave pages.
