--- a/TODO
+++ b/TODO
@@ -30,3 +30,7 @@
   "Tweets" in multiple categories.
   Reward authors for upvoted "tweets"?
   Items linking to Arweave pages.
+
+* Processing `arweave:` URL scheme and blogging engine.
+
+* Renaming owned categories.
