--- a/TODO
+++ b/TODO
@@ -36,3 +36,5 @@
 * Renaming owned categories.
 
 * Check that no JavaScript errors on owned categories.
+
+* `locale` belongs to `Created` or to `Updated` events?
