--- a/TODO
+++ b/TODO
@@ -28,3 +28,5 @@
   Items linking to Arweave pages.
 
 * Processing `arweave:` URL scheme and blogging engine.
+
+* Voting for entries of owned category disturbs author's intentions.
