--- a/TODO
+++ b/TODO
@@ -30,3 +30,5 @@
 * Processing `arweave:` URL scheme and blogging engine.
 
 * Voting for entries of owned category disturbs author's intentions.
+
+* `orderBy` forgotten.
