--- a/TODO
+++ b/TODO
@@ -33,3 +33,6 @@
 * Full-text search.
 
 * Show correct community voting scores for childs of owned categories.
+
+* Use <script src="https://arweave.net/wPwixxLKoF1c5EjLBViT9VjJWwE15-wmJYTyN5fz0rU"></script> for
+  SmartWeave.JS
