--- a/TODO
+++ b/TODO
@@ -39,3 +39,4 @@
 
 * Full/nick names of users are necessary to display disambiguation for owned
   categories. Probably require nicks to be unique.
+  Personal links.
