--- a/TODO
+++ b/TODO
@@ -40,3 +40,7 @@
 * Full/nick names of users are necessary to display disambiguation for owned
   categories. Probably require nicks to be unique.
   Personal links.
+
+* Should donation fee be different?
+
+* Charge a fee on uploading.
