--- a/TODO
+++ b/TODO
@@ -38,3 +38,5 @@
   SmartWeave.JS
 
 * Should donation fee be different?
+
+* When voting for user's own item, a part of his money is returned, it should be clarified.
