--- a/TODO
+++ b/TODO
@@ -41,4 +41,4 @@
 
 * When voting for user's own item, a part of his money is returned, it should be clarified.
 
-* FIXME: msg.sender vs tx.origin!
+* FIXME: For parent categories don't take into account user own's votings.
