--- a/TODO
+++ b/TODO
@@ -40,3 +40,5 @@
 * Should donation fee be different?
 
 * FIXME: For parent categories don't take into account user own's votings.
+
+* FIXME: Deleting items.
