--- a/TODO
+++ b/TODO
@@ -16,9 +16,9 @@
 
 * Ask before closing the page with files.
 
-* Blogging.
-
 * Processing `arweave:` URL scheme and blogging engine.
+
+* Smart contract and JavaScript based templates in blog.
 
 * Not owned (= not modificable) links.
 
