empty and arweave: links

--- a/TODO
+++ b/TODO
@@ -16,7 +16,7 @@
 
 * Ask before closing the page with files.
 
-* Processing `arweave:` URL scheme and blogging engine.
+* Blogging engine.
 
 * Smart contract and JavaScript based templates in blog.
 
