--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+* https://api.coingecko.com/api/v3/simple/price?ids=arweave%2Cethereum&vs_currencies=usd
+
+* Upgradeable contracts.
+
 * PayPal, etc.
 
 * Covers.
