--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 * Arweave author PSTs.
 
-* Interface to withdraw author's profits.
+* Interface to withdraw other authors' profits.
 
 * Upgradeable contracts.
 
