--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* Fuse with MEW. MonPay or Transak to buy Fuse.
+
 * Use ethers to initialize contracts because of possible nonce incompat with web3.js.
 
 * Sales of non-downloads (services, real things, etc.)
