--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-* Repeated initialize() on re-deploying logic contracts!
+* Sell more than one item quantity. Store shipping address in AR contract.
 
 * Use ethers to initialize contracts because of possible nonce incompat with web3.js.
 
