--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* Need smart contract to deliver AR sales to the seller.
+
 * Sell more than one item quantity.
 
 * Use ethers to initialize contracts because of possible nonce incompat with web3.js.
