--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* Affiliate program for entire site.
+
 * Selling physical items for AR.
 
 * Use ethers to initialize contracts because of possible nonce incompat with web3.js.
