--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* Revert on withdrawal of author's profit (apparently due to superfluous `.transfer()` that I removed).
+
 * Selling physical items for AR.
 
 * Use ethers to initialize contracts because of possible nonce incompat with web3.js.
