--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 * Every item is a category! (for reviews)
+  [for a category review is distinct from a subcategory; moreover, review always has only one parent unlike a subcategory]
 
 * Revert on withdrawal of author's profit (apparently due to superfluous `.transfer()` that I removed).
 
